2009-11-15  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch adds the option --inscop-fakearray. When enabled, every
	statement of the form 'FAKEARRAY[xxx] = yyy' in the generated
	kernel will be modified to 'yyy'. The FAKEARRAY trick is useful to
	explicitly declare write dependences for Candl, for instance
	loop-carried dependences on a function call inside a loop.

	* driver/pocc/include/pocc/options.h,
	* driver/pocc/options.c,
	* driver/pocc/driver-codegen.c,
	* driver/src/options.h,
	* driver/src/options.c: Add option --inscop-fakearray to
	optionally call the inscop-fakearray script in place of the
	standard inscop.

	* generators/scripts/inscop-fakearray: New. Modified inscop to
	remove the FAKEARRAY[x] = ... from the generated code.

2009-11-14  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* driver/pocc/include/pocc/driver-letsee.h,
	* driver/src/pocc.c: Fixes.

2009-11-14  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>
	This patch removes the driver-cloog, and explicitely call the
	polyhedral code generation process from within driver-codegen. It
	also creates driver-clastops, to separate Clast post-processing
	operations.

	* driver/pocc/driver-clastops.c,
	* driver/pocc/include/pocc/driver-clastops.h: New. Driver for the
	Clast related operations (CloogProgram to Clast conversion, and
	pretty print). Placeholder for future syntactic Clast
	transformations modules.
	* driver/pocc/driver-cloog.c,
	* driver/pocc/include/pocc/driver-cloog.h: Delete. Merged in
	driver-codegen, and cloog_program_generate is substituted by the
	clast pprint functions in driver-clastops.
	* driver/pocc/Makefile.am: Update accordingly.

	* driver/pocc/driver-codegen.c: Update with the new pass, and
	insert former code from driver-cloog (was indeed codegen related
	but not cloog specific).

2009-11-13  Louis-Noel Pouchet  <louis-noel.pouchet@inria.fr>

	* bin/pocc-checkout: Fix.
	* config/stable/configure.cfg: Fix wrong download path.
