@@ -77,7 +77,6 @@ main(int argc, char** argv)
   register int c0, c0t, newlb_c0, newub_c0, c1, c1t, newlb_c1, newub_c1, c2, c2t, newlb_c2, newub_c2, c3, c3t, newlb_c3, newub_c3, c4, c4t, newlb_c4, newub_c4, c5, c5t, newlb_c5, newub_c5, c6, c6t, newlb_c6, newub_c6;
 
 #pragma scop
-/* Generated from PLUTO-produced CLooG file by CLooG 0.14.0-201-g08025b1 gmp bits in 0.01s. */
 if (N >= 1) {
  lb1=0;
  ub1=floord(N-1,32);
@@ -87,31 +86,81 @@ if (N >= 1) {
 /*@ begin Loop(
 transform UnrollJam(ufactor=4)
       for (c3=32*c1;c3<=min(N-1,32*c1+31);c3++) 
+transform Unroll(ufactor=4)
+        for (c4=32*c2;c4<=min(N-1,32*c2+31);c4++) 
 {
-        for (c4=32*c2;c4<=min(N-1,32*c2+31);c4++) {
           S1(c1,c2,c4,c3);
           S2(c1,c2,c3,c4);
-        }
 }
 ) @*/{
 
-  for (c3 = 32 * c1; c3 <= min(N - 1, 32 * c1 + 31) - 3; c3 = c3 + 4)
-    for (c4 = 32 * c2; c4 <= min(N - 1, 32 * c2 + 31); c4++) {
-        A[c4][c3]=A[c4][c3]+u1[c4]*v1[c3]+u2[c4]*v2[c3];
-        x[c3]=x[c3]+A[c4][c3]*y[c4];
-        A[c4][(c3 + 1)]=A[c4][(c3 + 1)]+u1[c4]*v1[(c3 + 1)]+u2[c4]*v2[(c3 + 1)];
-        x[(c3 + 1)]=x[(c3 + 1)]+A[c4][(c3 + 1)]*y[c4];
-        A[c4][(c3 + 2)]=A[c4][(c3 + 2)]+u1[c4]*v1[(c3 + 2)]+u2[c4]*v2[(c3 + 2)];
-        x[(c3 + 2)]=x[(c3 + 2)]+A[c4][(c3 + 2)]*y[c4];
-        A[c4][(c3 + 3)]=A[c4][(c3 + 3)]+u1[c4]*v1[(c3 + 3)]+u2[c4]*v2[(c3 + 3)];
-        x[(c3 + 3)]=x[(c3 + 3)]+A[c4][(c3 + 3)]*y[c4];
-      }
+  for (c3 = 32 * c1; c3 <= min(N - 1, 32 * c1 + 31) - 3; c3 = c3 + 4) {
 
-  for (; c3 <= min(N - 1, 32 * c1 + 31); c3 = c3 + 1)
-    for (c4 = 32 * c2; c4 <= min(N - 1, 32 * c2 + 31); c4++) {
-        A[c4][c3]=A[c4][c3]+u1[c4]*v1[c3]+u2[c4]*v2[c3];
-        x[c3]=x[c3]+A[c4][c3]*y[c4];
-      }
+      for (c4 = 32 * c2; c4 <= min(N - 1, 32 * c2 + 31) - 3; c4 = c4 + 4) {
+          A[c4][c3]=A[c4][c3]+u1[c4]*v1[c3]+u2[c4]*v2[c3];
+          x[c3]=x[c3]+A[c4][c3]*y[c4];
+          A[(c4 + 1)][c3]=A[(c4 + 1)][c3]+u1[(c4 + 1)]*v1[c3]+u2[(c4 + 1)]*v2[c3];
+          x[c3]=x[c3]+A[(c4 + 1)][c3]*y[(c4 + 1)];
+          A[(c4 + 2)][c3]=A[(c4 + 2)][c3]+u1[(c4 + 2)]*v1[c3]+u2[(c4 + 2)]*v2[c3];
+          x[c3]=x[c3]+A[(c4 + 2)][c3]*y[(c4 + 2)];
+          A[(c4 + 3)][c3]=A[(c4 + 3)][c3]+u1[(c4 + 3)]*v1[c3]+u2[(c4 + 3)]*v2[c3];
+          x[c3]=x[c3]+A[(c4 + 3)][c3]*y[(c4 + 3)];
+          A[c4][(c3 + 1)]=A[c4][(c3 + 1)]+u1[c4]*v1[(c3 + 1)]+u2[c4]*v2[(c3 + 1)];
+          x[(c3 + 1)]=x[(c3 + 1)]+A[c4][(c3 + 1)]*y[c4];
+          A[(c4 + 1)][(c3 + 1)]=A[(c4 + 1)][(c3 + 1)]+u1[(c4 + 1)]*v1[(c3 + 1)]+u2[(c4 + 1)]*v2[(c3 + 1)];
+          x[(c3 + 1)]=x[(c3 + 1)]+A[(c4 + 1)][(c3 + 1)]*y[(c4 + 1)];
+          A[(c4 + 2)][(c3 + 1)]=A[(c4 + 2)][(c3 + 1)]+u1[(c4 + 2)]*v1[(c3 + 1)]+u2[(c4 + 2)]*v2[(c3 + 1)];
+          x[(c3 + 1)]=x[(c3 + 1)]+A[(c4 + 2)][(c3 + 1)]*y[(c4 + 2)];
+          A[(c4 + 3)][(c3 + 1)]=A[(c4 + 3)][(c3 + 1)]+u1[(c4 + 3)]*v1[(c3 + 1)]+u2[(c4 + 3)]*v2[(c3 + 1)];
+          x[(c3 + 1)]=x[(c3 + 1)]+A[(c4 + 3)][(c3 + 1)]*y[(c4 + 3)];
+          A[c4][(c3 + 2)]=A[c4][(c3 + 2)]+u1[c4]*v1[(c3 + 2)]+u2[c4]*v2[(c3 + 2)];
+          x[(c3 + 2)]=x[(c3 + 2)]+A[c4][(c3 + 2)]*y[c4];
+          A[(c4 + 1)][(c3 + 2)]=A[(c4 + 1)][(c3 + 2)]+u1[(c4 + 1)]*v1[(c3 + 2)]+u2[(c4 + 1)]*v2[(c3 + 2)];
+          x[(c3 + 2)]=x[(c3 + 2)]+A[(c4 + 1)][(c3 + 2)]*y[(c4 + 1)];
+          A[(c4 + 2)][(c3 + 2)]=A[(c4 + 2)][(c3 + 2)]+u1[(c4 + 2)]*v1[(c3 + 2)]+u2[(c4 + 2)]*v2[(c3 + 2)];
+          x[(c3 + 2)]=x[(c3 + 2)]+A[(c4 + 2)][(c3 + 2)]*y[(c4 + 2)];
+          A[(c4 + 3)][(c3 + 2)]=A[(c4 + 3)][(c3 + 2)]+u1[(c4 + 3)]*v1[(c3 + 2)]+u2[(c4 + 3)]*v2[(c3 + 2)];
+          x[(c3 + 2)]=x[(c3 + 2)]+A[(c4 + 3)][(c3 + 2)]*y[(c4 + 3)];
+          A[c4][(c3 + 3)]=A[c4][(c3 + 3)]+u1[c4]*v1[(c3 + 3)]+u2[c4]*v2[(c3 + 3)];
+          x[(c3 + 3)]=x[(c3 + 3)]+A[c4][(c3 + 3)]*y[c4];
+          A[(c4 + 1)][(c3 + 3)]=A[(c4 + 1)][(c3 + 3)]+u1[(c4 + 1)]*v1[(c3 + 3)]+u2[(c4 + 1)]*v2[(c3 + 3)];
+          x[(c3 + 3)]=x[(c3 + 3)]+A[(c4 + 1)][(c3 + 3)]*y[(c4 + 1)];
+          A[(c4 + 2)][(c3 + 3)]=A[(c4 + 2)][(c3 + 3)]+u1[(c4 + 2)]*v1[(c3 + 3)]+u2[(c4 + 2)]*v2[(c3 + 3)];
+          x[(c3 + 3)]=x[(c3 + 3)]+A[(c4 + 2)][(c3 + 3)]*y[(c4 + 2)];
+          A[(c4 + 3)][(c3 + 3)]=A[(c4 + 3)][(c3 + 3)]+u1[(c4 + 3)]*v1[(c3 + 3)]+u2[(c4 + 3)]*v2[(c3 + 3)];
+          x[(c3 + 3)]=x[(c3 + 3)]+A[(c4 + 3)][(c3 + 3)]*y[(c4 + 3)];
+        }
+
+      for (; c4 <= min(N - 1, 32 * c2 + 31); c4 = c4 + 1) {
+          A[c4][c3]=A[c4][c3]+u1[c4]*v1[c3]+u2[c4]*v2[c3];
+          x[c3]=x[c3]+A[c4][c3]*y[c4];
+          A[c4][(c3 + 1)]=A[c4][(c3 + 1)]+u1[c4]*v1[(c3 + 1)]+u2[c4]*v2[(c3 + 1)];
+          x[(c3 + 1)]=x[(c3 + 1)]+A[c4][(c3 + 1)]*y[c4];
+          A[c4][(c3 + 2)]=A[c4][(c3 + 2)]+u1[c4]*v1[(c3 + 2)]+u2[c4]*v2[(c3 + 2)];
+          x[(c3 + 2)]=x[(c3 + 2)]+A[c4][(c3 + 2)]*y[c4];
+          A[c4][(c3 + 3)]=A[c4][(c3 + 3)]+u1[c4]*v1[(c3 + 3)]+u2[c4]*v2[(c3 + 3)];
+          x[(c3 + 3)]=x[(c3 + 3)]+A[c4][(c3 + 3)]*y[c4];
+        }
+    }
+
+  for (; c3 <= min(N - 1, 32 * c1 + 31); c3 = c3 + 1) {
+
+      for (c4 = 32 * c2; c4 <= min(N - 1, 32 * c2 + 31) - 3; c4 = c4 + 4) {
+          A[c4][c3]=A[c4][c3]+u1[c4]*v1[c3]+u2[c4]*v2[c3];
+          x[c3]=x[c3]+A[c4][c3]*y[c4];
+          A[(c4 + 1)][c3]=A[(c4 + 1)][c3]+u1[(c4 + 1)]*v1[c3]+u2[(c4 + 1)]*v2[c3];
+          x[c3]=x[c3]+A[(c4 + 1)][c3]*y[(c4 + 1)];
+          A[(c4 + 2)][c3]=A[(c4 + 2)][c3]+u1[(c4 + 2)]*v1[c3]+u2[(c4 + 2)]*v2[c3];
+          x[c3]=x[c3]+A[(c4 + 2)][c3]*y[(c4 + 2)];
+          A[(c4 + 3)][c3]=A[(c4 + 3)][c3]+u1[(c4 + 3)]*v1[c3]+u2[(c4 + 3)]*v2[c3];
+          x[c3]=x[c3]+A[(c4 + 3)][c3]*y[(c4 + 3)];
+        }
+
+      for (; c4 <= min(N - 1, 32 * c2 + 31); c4 = c4 + 1) {
+          A[c4][c3]=A[c4][c3]+u1[c4]*v1[c3]+u2[c4]*v2[c3];
+          x[c3]=x[c3]+A[c4][c3]*y[c4];
+        }
+    }
 }
 /*@ end @*/
     }
